--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "course-directory-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aocsa.github.io/course-directory-app",
+  "homepage": "https://luisaGonzales.github.io/Lyft-Evaluado",
   "dependencies": {
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
